modification de DatabaseTools.java : toutes les requêtes SQL sont maintenant en async création de FilterActivity.java pour la page de filtre (dont la vue est activity_filter.xml) : gestion des radio buttons et du choix qui suit dans le spinner